# open_source

./: .gitignore  README.md  pyproject.toml  requirements.txt
profiles/: adobe_acrobat_deep.json
scripts/: export_ida_handoff.py  import_ida_results.py  run_native_deep_probe.py  run_pipeline.py  setup_native_tools_colab.sh
src/apk_pipeline/: __init__.py  api_placeholder.py  capability_taxonomy.py  code_ownership.py  config.py  evidence.py  ida_integration.py  input_resolver.py  logging_utils.py  models.py  native_decompiler.py  native_probe.py  native_semantics.py  phase0_split_inventory.py  phase1_manifest.py  phase2_jadx.py  phase3_native.py  phase4_resources.py  phase5_evidence.py  pipeline.py  profiles.py  run_context.py  tflite_parser.py  utils.py
tests/: test_phase012_quality.py  test_phase3_ida_integration.py  test_run_integrity.py
